Fix image problem for individual cards: image overflows

--- a/frontend/src/containers/Assets/AssetInfo.css
+++ b/frontend/src/containers/Assets/AssetInfo.css
@@ -14,11 +14,12 @@
   padding: 8px;
   max-height: 120px;
   max-width: 120px;
+  overflow: hidden;
 }
 
 .desc-image {
-  width: 100%;
-  object-position: center;
+  max-width: 100%;
+  max-height: 100%;
 }
 
 .desc-status {
